Fixed Spacing
fixed spacing above the footer.
added new meta box for projects for slideshow

--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -110,7 +110,6 @@
 		border-top: 1px solid rgba(0, 0, 0, 0.3);
 		width: 1100px;
 		margin: auto;
-		margin-top: 30px;
 		padding-top: 10px;
 		line-height: 1.7;
 	}
@@ -188,6 +187,7 @@
 	.page-wrapper
 	{
 		line-height: 2;
+		margin-bottom: 40px;
 	}
 
 	/* ------------------------------------------------------ */
@@ -199,6 +199,7 @@
 		float: left;
 		margin-right: 15px;
 		line-height: 1.3;
+		margin-bottom: 30px;
 	}
 	
 	article.blog-post
